Bug #41198
Resolved a problem where too many requests on an object caused OSD processing suicide over time
% Done:
60%
Source:
Community (dev)
Tags:
ObjecterCacher
Backport:
Mimic,Luminous,Nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
fs
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
When there is a large number of skip writes on an object,and each time only a few bytes are written, the OC will send an operation containing tens of thousands of write requests, causing OSD processing to time out.
So,i think wo can add an configuration item ,When the number of requests for an object on the OC reaches 1000,We force this object to be flushed from the OC.
History
#1 Updated by Neha Ojha over 3 years ago
- Project changed from Ceph to RADOS
- Category deleted (
ObjectCacher) - Status changed from New to Fix Under Review
- Pull request ID set to 29601