ObjectCacher: If there are tens of thousands or even hundreds of thousands discrete write operations on an object ,and the length of those operations are all only a few bytes,when the object is flushed to OSD from OC,it will cause the OSD handles the request timeout,and cause the OSD suicide ultimately.Meantime, if the number of operations is greater than 65535,it will cause the message decode incompletely on the OSD,because the variable that represents the number of operations is uint16 in the finish_decode() function. So based on the above situation,I suggest we can add a config option to limit the number of write operations on a single object in OC, once the number exceeds the limit, we make the object flushed to OSD by force rather than waiting for concentrated flush.Now,suggested default value of the config option is 10000.

fix bug 41198:https://tracker.ceph.com/issues/41198

Signed-off-by: houbin0504 <houbinbj@inspur.com>